--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "nextjs-notion-starter-kit",
+  "name": "sobesin",
   "version": "2.0.0",
   "private": true,
   "description": "The perfect starter kit for building beautiful websites with Next.js and Notion.",
-  "author": "Travis Fischer <travis@transitivebullsh.it>",
+  "author": "Michel Cheremukhin-Rerberg <travis@transitivebullsh.it>",
   "repository": "transitive-bullshit/nextjs-notion-starter-kit",
   "license": "MIT",
   "packageManager": "pnpm@10.11.1",
@@ -34,6 +34,7 @@
     "@fisch0920/use-dark-mode": "^2.4.0",
     "@keyvhq/core": "^1.6.9",
     "@keyvhq/redis": "^1.6.10",
+    "@notionhq/client": "^5.4.0",
     "@react-icons/all-files": "^4.1.0",
     "classnames": "^2.5.1",
     "expiry-map": "^2.0.0",
